changed about pages title

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> About me </title>
+    <title> About Johanna Sahlberg </title>
 
       <!-- following link is for the favicon // -->
     <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
