--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title> Home </title>
+  <title> Johanna Sahlberg's work </title>
 
     <!-- following link is for the favicon // -->
   <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
