--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> Contact Johanna Sahlberg </title>
+    <title> Contact page </title>
 
       <!-- following link is for the favicon // -->
     <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
