updated about me text

--- a/about.html
+++ b/about.html
@@ -82,27 +82,14 @@
         </h1>
 
         <p id="about-paragraph" class="about-section__paragraph">
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore <br>
-          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut <br>
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum <br>
-          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <br>
-          officia deserunt mollit anim id est laborum."
+          "Hello there, <br>
+           I am Johanna and I am an aspiring full-stack web developer from Sweden living in Hamburg, Germany. <br>
+           I am fluent Swedish, English and German, which means I can work on projects in all 3 languages.<br>
+           A passion of mine is to create beautiful and functional new websites and to solve all kinds of problems,
+           while ensuring accessibility for all."
         </p>
       </section>
 
-      <section class="about-section">
-        <h2 id="about-developer-heading" class="section__header2 about-section__header2">
-          How I became a fullstack web developer
-        </h2>
-
-        <p id="about-developer-paragraph" class="about-section__paragraph">
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore <br>
-          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut <br>
-          aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum <br>
-          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <br>
-          officia deserunt mollit anim id est laborum."
-        </p>
-      </section>
 
       <section class="about-section">
         <h2 id="about-skills-table" class="about-section__header2">
