--- a/about.html
+++ b/about.html
@@ -82,11 +82,12 @@
         </h1>
 
         <p id="about-paragraph" class="about-section__paragraph">
-          "Hello there, <br>
-           I am Johanna and I am an aspiring full-stack web developer from Sweden living in Hamburg, Germany. <br>
-           I am fluent Swedish, English and German, which means I can work on projects in all 3 languages.<br>
+          Hello there, <br> <br>
+           I am Johanna and I am an aspiring full-stack web developer from Sweden living in Hamburg, Germany. <br> <br>
            A passion of mine is to create beautiful and functional new websites and to solve all kinds of problems,
-           while ensuring accessibility for all."
+           while ensuring accessibility for all. <br> <br>
+           I am fluent Swedish, English and German, which means I can work on projects in all 3 languages.<br> <br>
+           When I am not working or learning more about web development, I enjoy reading all kinds of books, travelling and photography.  
         </p>
       </section>
 
