changed contact me link email adress

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
         </h1>
 
         <p class="contact-section__paragraph">
-          <a href="mailto:j.sahlberg@gmx.de ?subject=testing email link" id="link__contact-me" class="links contact-section__link">
+          <a href="mailto:johanna.sahlberg@outlook.de ?subject=testing email link" id="link__contact-me" class="links contact-section__link">
             Click here to contact me
           </a>
           or send me a message using the contact form below.
