--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </h1>
 
         <p id="introduction-pragraph" class="profile-section__paragraph">
-          My name is Johanna Sahlberg. <br> I am a <span id="text__fullstack-web-developer">fullstack web developer</span> and I love creating beautiful and functional websites.
+          My name is Johanna Sahlberg. <br> I am a <span id="text__fullstack-web-developer">fullstack web developer</span> and I love creating beautiful, functional and accessible websites.
         </p>
 
         <p>
