--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
 
     <section>
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="600" zoomAndPan="magnify" viewBox="0 0 450 149.999998" height="200" preserveAspectRatio="xMidYMid meet" version="1.0">
+      <svg id="hamburg_skyline_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="600" zoomAndPan="magnify" viewBox="0 0 450 149.999998" height="200" preserveAspectRatio="xMidYMid meet" version="1.0">
         <defs>
           <clipPath id="61844b33ea">
             <path d="M 0 47.640625 L 450 47.640625 L 450 150 L 0 150 Z M 0 47.640625 " clip-rule="nonzero" />
