--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
           Contact form
         </h2>
 
-        <form action=" " method="post" id="contact-form" class="contact-section__form" name="Contact form">
+        <form action="mailto: johanna.sahlberg@outlook.de " method="post" id="contact-form" class="contact-section__form" name="Contact form">
 
           <label class="standard-label standard-label__email" for="contact-email"> Your e-Mail adress: </label>
           <input type="email" id="contact-form-input__email" class="contact-form__input" required> <br>
