--- a/work.html
+++ b/work.html
@@ -35,8 +35,10 @@
 
   <header class="page-header">
 
-    <img src="img/JS-logo.png" alt="logo in stylised text Johanna Sahlberg, fullstack web developer" id="header-image__logo" class="page-header__item">
-
+    <a href="index.html">
+      <img src="img/JS-logo.png" alt="logo in stylised text Johanna Sahlberg, fullstack web developer" id="header-image__logo" class="page-header__item">
+    </a>
+    
     <nav class="page-header__item">
       <ul id="header-links__ul" role="menubar" class="navigation-list">
         <li role="presentation" class="navigation__item">
