--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,9 @@
 
   <header class="page-header">
 
-    <img src="img/JS-logo.png" alt="logo in stylised text Johanna Sahlberg, fullstack web developer" id="header-image__logo" class="page-header__item">
+    <a href="index.html">
+      <img src="img/JS-logo.png" alt="logo in stylised text Johanna Sahlberg, fullstack web developer" id="header-image__logo" class="page-header__item">
+    </a>
 
     <nav class="page-header__item">
       <ul id="header-links__ul" role="menubar" class="navigation-list">
@@ -60,7 +62,9 @@
     <section class="contact">
 
       <section class="contact-section">
-        <img src="img/JS-logo.png" alt="JS logo" id="contact-section__image" class="contact-section__image">
+        <a href="index.html">
+          <img src="img/JS-logo.png" alt="JS logo" id="contact-section__image" class="contact-section__image">
+        </a>
       </section>
 
       <section class="contact-section">
