added link to homepage behind logo

--- a/about.html
+++ b/about.html
@@ -34,7 +34,9 @@
 
   <header class="page-header">
 
-    <img src="img/JS-logo.png" alt="logo in stylised text Johanna Sahlberg, fullstack web developer" id="header-image__logo" class="page-header__item">
+    <a href="index.html">
+      <img src="img/JS-logo.png" alt="logo in stylised text Johanna Sahlberg, fullstack web developer" id="header-image__logo" class="page-header__item">
+    </a>
 
     <nav class="page-header__item">
       <ul id="header-links__ul" role="menubar" class="navigation-list">
@@ -87,7 +89,7 @@
            A passion of mine is to create beautiful and functional new websites and to solve all kinds of problems,
            while ensuring accessibility for all. <br> <br>
            I am fluent Swedish, English and German, which means I can work on projects in all 3 languages.<br> <br>
-           When I am not working or learning more about web development, I enjoy reading all kinds of books, travelling and photography.  
+           When I am not working or learning more about web development, I enjoy reading all kinds of books, travelling and photography.
         </p>
       </section>
 
