adjusted about text

--- a/about.html
+++ b/about.html
@@ -84,10 +84,10 @@
         <p id="about-paragraph" class="about-section__paragraph">
           Hello there, <br> <br>
            I am Johanna and I am an aspiring full-stack web developer from Sweden living in Hamburg, Germany. <br> <br>
-           A passion of mine is to create beautiful and functional new websites and to solve all kinds of problems,
-           while ensuring accessibility for all. <br> <br>
-           I am fluent Swedish, English and German, which means I can work on projects in all 3 languages.<br> <br>
-           When I am not working or learning more about web development, I enjoy reading all kinds of books, travelling and photography.
+           A passion of mine is to create beautiful and functional new websites,
+           while ensuring accessibility for all. I also like solving all kinds of problems efficiently.  <br> <br>
+           I am fluent in Swedish, English and German, which means I can work on projects in all 3 languages.<br> <br>
+           When I am not coding or learning more about web development, I enjoy reading all kinds of books, travelling and photography.
         </p>
       </section>
 
