added second link to projects

--- a/work.html
+++ b/work.html
@@ -75,7 +75,12 @@
             aliquip ex ea commodo consequat."
           </p>
 
-          <a href="#" class="project-list__link"> Check out project 1 on GitHub </a>
+          <p>
+            <a href="#" class="project-list__link"> Come check out the website </a>   or <br>
+            <a href="#" class="project-list__link"> check it out on GitHub </a>
+          </p>
+
+
         </div>
 
         <div class="project-list__item">
@@ -87,7 +92,10 @@
             aliquip ex ea commodo consequat."
           </p>
 
-          <a href="#" class="project-list__link"> Check out project 2 on GitHub </a>
+          <p>
+            <a href="#" class="project-list__link"> Come check out the website </a>   or <br>
+            <a href="#" class="project-list__link"> check it out on GitHub </a>
+          </p>
         </div>
 
         <div class="project-list__item">
@@ -99,7 +107,10 @@
             aliquip ex ea commodo consequat."
           </p>
 
-          <a href="#" class="project-list__link"> Check out project 3 on GitHub </a>
+          <p>
+            <a href="#" class="project-list__link"> Come check out the website </a>   or <br>
+            <a href="#" class="project-list__link"> check it out on GitHub </a>
+          </p>
         </div>
 
         <div class="project-list__item">
@@ -111,7 +122,10 @@
             aliquip ex ea commodo consequat."
           </p>
 
-          <a href="#" class="project-list__link"> Check out project 4 on GitHub </a>
+          <p>
+            <a href="#" class="project-list__link"> Come check out the website </a>   or <br>
+            <a href="#" class="project-list__link"> check it out on GitHub </a>
+          </p>
         </div>
 
         <div class="project-list__item">
@@ -123,7 +137,10 @@
             aliquip ex ea commodo consequat."
           </p>
 
-          <a href="#" class="project-list__link"> Check out project 5 on GitHub </a>
+          <p>
+            <a href="#" class="project-list__link"> Come check out the website </a>   or <br>
+            <a href="#" class="project-list__link"> check it out on GitHub </a>
+          </p>
         </div>
 
         <div class="project-list__item">
@@ -135,7 +152,11 @@
             I have skills in the following technologies <br>
             - HTML <br>
             - CSS <br>
-            - ...
+            - JavaScript <br>
+            - ... <br>
+            - ... <br>
+            - ... <br>
+            - ... <br>
             <!-- add more as needed --> <br>
             and I am ore than happy to learn other technologies if needed.
           </p>
