added another project space

--- a/work.html
+++ b/work.html
@@ -144,6 +144,21 @@
         </div>
 
         <div class="project-list__item">
+          <h2 class="section__header2 project-list-item__header"> Project 6 </h2>
+
+          <p class="project-list__paragraph">
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore <br>
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut <br>
+            aliquip ex ea commodo consequat."
+          </p>
+
+          <p>
+            <a href="#" class="project-list__link"> Come check out the website </a>   or <br>
+            <a href="#" class="project-list__link"> check it out on GitHub </a>
+          </p>
+        </div>
+
+        <div class="project-list__item">
           <h2 class="section__header2 project-list-item__header"> Your project? </h2>
 
           <p class="project-list__paragraph">
