added title to svg file ,changed subject line for the clickable link, corrected for value in form labels

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 
       <section class="contact-section contact-section__svg">
         <a href="index.html">
-          <svg id="logo_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="340" zoomAndPan="magnify" viewBox="0 0 375 374.999991" height="340" preserveAspectRatio="xMidYMid meet" version="1.0">
+          <svg title="clickable animated logo image with link to homepage" id="logo_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="340" zoomAndPan="magnify" viewBox="0 0 375 374.999991" height="340" preserveAspectRatio="xMidYMid meet" version="1.0">
             <defs>
               <g />
               <clipPath id="b925de21b0">
@@ -526,7 +526,7 @@
         </h1>
 
         <p class="contact-section__paragraph">
-          <a href="mailto:johanna.sahlberg@outlook.de ?subject=testing email link" id="link__contact-me" class="links contact-section__link">
+          <a href="mailto:johanna.sahlberg@outlook.de ?subject= Contact via website " id="link__contact-me" class="links contact-section__link">
             Click here to contact me
           </a>
           or send me a message using the contact form below.
@@ -549,15 +549,15 @@
 
         <form action="mailto: johanna.sahlberg@outlook.de " method="post" id="contact-form" class="contact-section__form" name="Contact form">
 
-          <label class="standard-label standard-label__email" for="contact-email"> Your e-Mail adress: </label>
+          <label class="standard-label standard-label__email" for="contact-form-input__email"> Your e-mail adress: </label>
           <input type="email" id="contact-form-input__email" class="contact-form__input" required> <br>
 
 
-          <label class="standard-label standard-label__tel" for="contact-tel"> Your phone number: </label>
+          <label class="standard-label standard-label__tel" for="contact-form-input__tel"> Your phone number: </label>
           <input type="tel" id="contact-form-input__tel" class="contact-form__input"> <br>
           <!-- ? add country ID later with js ? -->
 
-          <label class="standard-label standard-label__message" for="contact-message"> Your message*:</label>
+          <label class="standard-label standard-label__message" for="contact-form-input__message"> Your message*:</label>
           <textarea type="text" id="contact-form-input__message" class="contact-form__input" rows="8" cols="80" maxlength="240" required> </textarea>
           <!-- not sure if rows and cols will be needed later in the process // -->
 
