--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
           Hello there, <br> <br>
            I am Johanna and I am an aspiring full-stack web developer from Sweden living in Hamburg, Germany. <br> <br>
            A passion of mine is to create beautiful and functional new websites,
-           while ensuring accessibility for all. I also like solving all kinds of problems efficiently.  <br> <br>
+           while ensuring accessibility for all. I also like solving all kinds of problems efficiently. Connecting the dots has always been a strong suit of mine. <br> <br>
            I am fluent in Swedish, English and German, which means I can work on projects in all 3 languages.<br> <br>
            When I am not coding or learning more about web development, I enjoy reading all kinds of books, travelling and photography.
         </p>
