corrected the links in the nav bar

--- a/index-german.html
+++ b/index-german.html
@@ -40,16 +40,16 @@
     <nav class="page-header__item">
       <ul id="header-links__ul" role="menubar" class="navigation-list">
         <li role="presentation" class="navigation__item">
-          <a href="index.html" id="header-link__home" class="navigation-list__item navigation-list__item--active" role="menuitem"> Start </a>
+          <a href="index-german.html" id="header-link__home" class="navigation-list__item navigation-list__item--active" role="menuitem"> Start </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="about.html" id="header-link__about" class="navigation-list__item" role="menuitem"> Über mich </a>
+          <a href="about-german.html" id="header-link__about" class="navigation-list__item" role="menuitem"> Über mich </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="work.html" role="menuitem" class="navigation-list__item"> Meine Projekte </a>
+          <a href="work-german.html" role="menuitem" class="navigation-list__item"> Meine Projekte </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="contact.html" id="header-link__contact" class="navigation-list__item" role="menuitem"> Kontakt </a>
+          <a href="contact-german.html" id="header-link__contact" class="navigation-list__item" role="menuitem"> Kontakt </a>
         </li>
       </ul>
     </nav>
