corrected text elements

--- a/contact-german.html
+++ b/contact-german.html
@@ -529,11 +529,11 @@
           <a href="mailto:johanna.sahlberg@outlook.de ?subject= Contact via website " id="link__contact-me" class="links contact-section__link">
             Klickt hier um mich zu kontaktieren
           </a>
-          oder schickt mir eine Nachricht über das untenstehende Formular
+          oder schickt mir eine Nachricht über das untenstehende Formular.
         </p>
 
         <p class="contact-section__paragraph">
-          Klick auf den folgenden Knopf um meinen Lebenlauf einzusehen:
+          Klickt auf den folgenden Knopf um meinen Lebenlauf einzusehen:
         </p>
 
         <a href="files/CV-Johanna_Sahlberg.pdf" type="button" class="button" target="_blank">
