added language menu to nav bar

--- a/contact-german.html
+++ b/contact-german.html
@@ -51,6 +51,19 @@
         <li role="presentation" class="navigation__item">
           <a href="contact-german.html" id="header-link__contact" class="navigation-list__item navigation-list__item--active" role="menuitem"> Kontakt </a>
         </li>
+        <li role="presentation" class="navigation__item">
+          <ul role="language menu bar" class="navigation__item navigation__item-language-list">
+            <li role="presentation" class="navigation__item-language">
+              <a href="contact.html"> <img src="img/icon_british-flag.png" alt="clickable britsh flag icon" class="language-icon-img"> </a>
+            </li>
+            <li role="presentation" class="navigation__item-language">
+              <a href="contact-german.html"> <img src="img/icon_german-flag.png" alt="clickable german flag icon" class="language-icon-img"> </a>
+            </li>
+            <li role="presentation" class="navigation__item-language">
+              <a href="contact-swedish.html"> <img src="img/icon_swedish-flag.png" alt="clickable swedish flag icon" class="language-icon-img"> </a>
+            </li>
+          </ul>
+        </li>
       </ul>
     </nav>
 
@@ -61,7 +74,7 @@
     <section class="contact">
 
       <section class="contact-section contact-section__svg">
-        <a href="index.html">
+        <a href="index-german.html">
           <svg title="clickable animated logo image with link to homepage" id="logo_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="340" zoomAndPan="magnify" viewBox="0 0 375 374.999991" height="340" preserveAspectRatio="xMidYMid meet" version="1.0">
             <defs>
               <g />
