--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
         <li role="presentation" class="navigation__item">
           <a href="contact.html" id="header-link__contact" class="navigation-list__item" role="menuitem"> Contact </a>
         </li>
+        <li role="presentation" class="navigation__item">
+          <ul role="language menu bar" class="navigation__item navigation__item-language-list">
+            <li role="presentation" class="navigation__item-language">
+              <a href="index.html"> <img src="img/icon_british-flag.png" alt="clickable britsh flag icon" class="language-icon-img"> </a>
+            </li>
+            <li role="presentation" class="navigation__item-language">
+              <a href="index-german.html"> <img src="img/icon_german-flag.png" alt="clickable german flag icon" class="language-icon-img"> </a>
+            </li>
+            <li role="presentation" class="navigation__item-language">
+              <a href="index-swedish.html"> <img src="img/icon_swedish-flag.png" alt="clickable swedish flag icon" class="language-icon-img"> </a>
+            </li>
+          </ul>
+        </li>
       </ul>
     </nav>
 
