--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" dir="ltr">
+<html>
 
 <head>
   <!--
@@ -49,6 +49,19 @@
         </li>
         <li role="presentation" class="navigation__item">
           <a href="contact.html" id="header-link__contact" class="links navigation-list__item" role="menuitem"> Contact </a>
+        </li>
+        <li role="presentation" class="navigation__item">
+          <ul role="language menu bar" class="navigation__item navigation__item-language-list">
+            <li role="presentation" class="navigation__item-language">
+              <a href="about.html"> <img src="img/icon_british-flag.png" alt="clickable britsh flag icon" class="language-icon-img"> </a>
+            </li>
+            <li role="presentation" class="navigation__item-language">
+              <a href="about-german.html"> <img src="img/icon_german-flag.png" alt="clickable german flag icon" class="language-icon-img"> </a>
+            </li>
+            <li role="presentation" class="navigation__item-language">
+              <a href="about-swedish.html"> <img src="img/icon_swedish-flag.png" alt="clickable swedish flag icon" class="language-icon-img"> </a>
+            </li>
+          </ul>
         </li>
       </ul>
     </nav>
