--- a/about-swedish.html
+++ b/about-swedish.html
@@ -91,7 +91,7 @@
 
       <section class="about-section">
         <h1 id="about-section__h1" class="section__header1 about-section__header1">
-          About me
+          Om mig
         </h1>
 
         <p id="about-paragraph" class="about-section__paragraph">
@@ -145,7 +145,7 @@
           Om du vill veta mer om mina förmågor och mina erfarenheter, klicka på knappen nedanför, för att se mit CV
         </p>
 
-        <a href="files/CV-Johanna_Sahlberg.pdf" type="button" class="button" download target="_blank">
+        <a href="files/CV-Johanna_Sahlberg-swedish.pdf" type="button" class="button" download target="_blank">
           Se mitt CV
         </a>
       </section>
