--- a/contact-swedish.html
+++ b/contact-swedish.html
@@ -40,16 +40,16 @@
     <nav class="page-header__item">
       <ul id="header-links__ul" role="menubar" class="navigation-list">
         <li role="presentation" class="navigation__item">
-          <a href="index.html" id="header-link__home" class="navigation-list__item " role="menuitem"> Hem </a>
+          <a href="index-swedish.html" id="header-link__home" class="navigation-list__item " role="menuitem"> Hem </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="about.html" id="header-link__about" class="navigation-list__item" role="menuitem"> Om mig </a>
+          <a href="about-swedish.html" id="header-link__about" class="navigation-list__item" role="menuitem"> Om mig </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="work.html" role="menuitem" class="navigation-list__item"> Mina projekt </a>
+          <a href="work-swedish.html" role="menuitem" class="navigation-list__item"> Mina projekt </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="contact.html" id="header-link__contact" class="navigation-list__item navigation-list__item--active" role="menuitem"> Kontakt </a>
+          <a href="contact-swedish.html" id="header-link__contact" class="navigation-list__item navigation-list__item--active" role="menuitem"> Kontakt </a>
         </li>
         <li role="presentation" class="navigation__item">
           <ul role="language menu bar" class="navigation__item navigation__item-language-list">
@@ -549,7 +549,7 @@
           Du kan även se mitt CV om du klickar på följande knapp:
         </p>
 
-        <a href="files/CV-Johanna_Sahlberg.pdf" type="button" class="button" target="_blank">
+        <a href="files/CV-Johanna_Sahlberg-swedish.pdf" type="button" class="button" target="_blank">
           Se mitt CV
         </a>
 
