--- a/work-german.html
+++ b/work-german.html
@@ -189,7 +189,7 @@
             und ich eigne mir gerne noch weitere notwendige Technologien an.
           </p>
 
-          <a href="contact.html" type="button" class="button">
+          <a href="contact-german.html" type="button" class="button">
             Kontaktiere mich jetzt
           </a>
         </div>
