--- a/work-swedish.html
+++ b/work-swedish.html
@@ -41,16 +41,16 @@
     <nav class="page-header__item">
       <ul id="header-links__ul" role="menubar" class="navigation-list">
         <li role="presentation" class="navigation__item">
-          <a href="index.html" id="header-link__home" class="navigation-list__item" role="menuitem"> Hem </a>
+          <a href="index-swedish.html" id="header-link__home" class="navigation-list__item" role="menuitem"> Hem </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="about.html" id="header-link__about" class="navigation-list__item" role="menuitem"> Om mig </a>
+          <a href="about-swedish.html" id="header-link__about" class="navigation-list__item" role="menuitem"> Om mig </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active"> Mina projekt </a>
+          <a href="work-swedish.html" role="menuitem" class="navigation-list__item navigation-list__item--active"> Mina projekt </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <a href="contact.html" id="header-link__contact" class="navigation-list__item" role="menuitem"> Kontakt </a>
+          <a href="contact-swedish.html" id="header-link__contact" class="navigation-list__item" role="menuitem"> Kontakt </a>
         </li>
         <li role="presentation" class="navigation__item">
           <ul role="language menu bar" class="navigation__item navigation__item-language-list">
@@ -189,7 +189,7 @@
             och jag lär mig gärna fler om det behövs.
           </p>
 
-          <a href="contact.html" type="button" class="button">
+          <a href="contact-swedish.html" type="button" class="button">
             Kontaktera mig nu
           </a>
         </div>
