corrected spelling mistake

--- a/index-german.html
+++ b/index-german.html
@@ -92,7 +92,7 @@
         <p id="introduction-pragraph" class="profile-section__paragraph">
         Mein Name ist Johanna Sahlberg. <br>
         Ich bin eine <span id="text__fullstack-web-developer">full-stack Entwicklerin</span>
-        und ich liebe es schöne, funktionale und zugängliche Webseiten zu kreieren.
+        und ich liebe es schöne, funktionelle und zugängliche Webseiten zu kreieren.
         </p>
 
         <p>
