corrected spelling mistake

--- a/contact-swedish.html
+++ b/contact-swedish.html
@@ -579,7 +579,7 @@
           </p>
 
           <button type="submit" name="submit-message-button" class="button submitbutton contact-section__submitbutton" id="send-message-button">
-            Skicak medelande
+            Skicka medelande
           </button>
         </form>
 
