corrected grammar mistake

--- a/contact-swedish.html
+++ b/contact-swedish.html
@@ -542,7 +542,7 @@
           <a href="mailto:johanna.sahlberg@outlook.de ?subject= Contact via website " id="link__contact-me" class="links contact-section__link">
             Klicka här för att kontakta mig
           </a>
-          eller skicka mig ett medelande med nedanstående formulär.
+          eller skicka ett medelande med nedanstående formulär.
         </p>
 
         <p class="contact-section__paragraph">
