--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
   <!--
@@ -8,7 +8,9 @@
       - work on the meta data, it is no good yet
       ### //
     -->
-  <meta charset="utf-8" name="JS Portfolio Site" content=" This is a fullstack web developer's (Johanna Sahlberg) Portfolio Site. Check out the work. ">
+  <meta charset="utf-8" >
+
+  <meta name="JS Portfolio Site" content=" This is a fullstack web developer's (Johanna Sahlberg) Portfolio Site. Check out the work. ">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -51,7 +53,7 @@
           <a href="contact.html" id="header-link__contact" class="links navigation-list__item" role="menuitem"> Contact </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <ul role="language menu bar" class="navigation__item navigation__item-language-list">
+          <ul role="menubar" class="navigation__item navigation__item-language-list">
             <li role="presentation" class="navigation__item-language">
               <a href="about.html"> <img src="img/icon_british-flag.png" alt="clickable britsh flag icon" class="language-icon-img"> </a>
             </li>
@@ -84,9 +86,9 @@
           - adjust alt accordingly
           ### //
           -->
-      <section class="about-section">
+      <div class="about-section">
         <img src="img/portraits/Johanna-Sahlberg-portrait.JPEG" alt="Portrait of Johanna" id="about-section__portrait" class="images about-section__image profile__portrait">
-      </section>
+      </div>
 
 
       <section class="about-section">
@@ -155,8 +157,8 @@
           - then animate that vector image
           ### //
           -->
-          <section class="svg">
-            <svg class="hamburg_skyline_svg" id="hamburg_skyline_svg_about" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="600" zoomAndPan="magnify" viewBox="0 0 450 149.999998" height="200" preserveAspectRatio="xMidYMid meet" version="1.0">
+          <div class="svg">
+            <svg class="hamburg_skyline_svg" id="hamburg_skyline_svg_about" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="600" zoomAndPan="magnify" viewBox="0 0 450 149.999998" height="200" preserveAspectRatio="xMidYMid meet">
               <defs>
                 <clipPath id="61844b33ea">
                   <path d="M 0 47.640625 L 450 47.640625 L 450 150 L 0 150 Z M 0 47.640625 " clip-rule="nonzero" />
@@ -243,7 +245,7 @@
                   fill-opacity="1" fill-rule="nonzero" />
               </g>
             </svg>
-          </section>
+          </div>
 
     </section>
 
