--- a/index-swedish.html
+++ b/index-swedish.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="sv">
 
 <head>
   <!--
@@ -9,7 +9,9 @@
       - maybe change page title
       ### //
     -->
-  <meta charset="utf-8" name="JS Portfolio Site" content=" This is a fullstack web developer's (Johanna Sahlberg) Portfolio Site. Check out the work. ">
+  <meta charset="utf-8">
+
+  <meta name="JS Portfolio Site" content=" This is a fullstack web developer's (Johanna Sahlberg) Portfolio Site. Check out the work. ">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -52,7 +54,7 @@
           <a href="contact-swedish.html" id="header-link__contact" class="navigation-list__item" role="menuitem"> Kontakt </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <ul role="language menu bar" class="navigation__item navigation__item-language-list">
+          <ul role="menubar" class="navigation__item navigation__item-language-list">
             <li role="presentation" class="navigation__item-language">
               <a href="index.html"> <img src="img/icon_british-flag.png" alt="clickable britsh flag icon" class="language-icon-img"> </a>
             </li>
@@ -80,9 +82,9 @@
             - adjust alt accordingly
             ### //
             -->
-      <section class="profile-section__image">
+      <div class="profile-section__image">
         <img src="img/portraits/Johanna-Sahlberg-portrait.JPEG" alt="Oval portait of a smiling Johanna" id="profile-section__portrait" class="images profile-section__image profile__portrait">
-      </section>
+      </div>
 
       <section class="profile-section">
         <h1 id="hello-world" class="section__header1 profile-section__header1">
@@ -92,7 +94,7 @@
         <p id="introduction-pragraph" class="profile-section__paragraph">
           Mitt namn är Johanna Sahlberg. <br>
           Jag är en <span id="text__fullstack-web-developer">fullstack web developer</span>
-          och jag älskar att ska vackra, funktionella och tillgängliga websidor.
+          och jag älskar att skapa vackra, funktionella och tillgängliga websidor.
         </p>
 
         <p>
@@ -109,7 +111,7 @@
         </p>
 
         <div class="svg">
-          <svg class="hamburg_skyline_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="600" zoomAndPan="magnify" viewBox="0 0 450 149.999998" height="200" preserveAspectRatio="xMidYMid meet" version="1.0">
+          <svg class="hamburg_skyline_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="600" zoomAndPan="magnify" viewBox="0 0 450 149.999998" height="200" preserveAspectRatio="xMidYMid meet">
             <defs>
               <clipPath id="61844b33ea">
                 <path d="M 0 47.640625 L 450 47.640625 L 450 150 L 0 150 Z M 0 47.640625 " clip-rule="nonzero" />
