--- a/work-swedish.html
+++ b/work-swedish.html
@@ -1,6 +1,6 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 
-<html>
+<html lang="sv">
 
 <head>
   <!--
@@ -9,7 +9,9 @@
     - maybe change page title
     ### //
   -->
-  <meta charset="utf-8" name="JS Portfolio Site" content=" This is a fullstack web developer's (Johanna Sahlberg) Portfolio Site. Check out the work. ">
+  <meta charset="utf-8">
+
+  <meta  name="JS Portfolio Site" content=" This is a fullstack web developer's (Johanna Sahlberg) Portfolio Site. Check out the work.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,7 +55,7 @@
           <a href="contact-swedish.html" id="header-link__contact" class="navigation-list__item" role="menuitem"> Kontakt </a>
         </li>
         <li role="presentation" class="navigation__item">
-          <ul role="language menu bar" class="navigation__item navigation__item-language-list">
+          <ul role="menubar" class="navigation__item navigation__item-language-list">
             <li role="presentation" class="navigation__item-language">
               <a href="work.html"> <img src="img/icon_british-flag.png" alt="clickable britsh flag icon" class="language-icon-img"> </a>
             </li>
