fixed errors found with w3c validator (all but 1 in a svg)

--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@
   <title> About Johanna Sahlberg </title>
 
   <!-- following link is for the favicon // -->
-  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32">
 
   <!-- following link connects to a CDN (content delivery network) to nomralise css
       forcing the browser to render all elements more consistently and inline with modern standards // -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
+    referrerpolicy="no-referrer" >
 
   <!-- following links embeds the fonts, they need to be embeded ahead of the link to the css file // -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -91,7 +91,7 @@
       </div>
 
 
-      <section class="about-section">
+      <div class="about-section">
         <h1 id="about-section__h1" class="section__header1 about-section__header1">
           About me
         </h1>
@@ -104,10 +104,10 @@
            I am fluent in Swedish, English and German, which means I can work on projects in all 3 languages.<br> <br>
            When I am not coding or learning more about web development, I enjoy reading all kinds of books, travelling and photography.
         </p>
-      </section>
+      </div>
 
 
-      <section class="about-section">
+      <div class="about-section">
         <h2 id="about-skills-table" class="about-section__header2">
           Skills & Experience
         </h2>
@@ -146,10 +146,10 @@
           To learn more about my skills and experiences click on the button below to view my CV
         </p>
 
-        <a href="files/CV-Johanna_Sahlberg-english.pdf" type="button" class="button" download target="_blank">
+        <a href="files/CV-Johanna_Sahlberg-english.pdf" class="button" download target="_blank">
           View my CV
         </a>
-      </section>
+      </div>
 
       <!-- This is a vector image of berlin, do not keep this as is
           ###
