--- a/contact-swedish.html
+++ b/contact-swedish.html
@@ -17,12 +17,12 @@
   <title> Kontakt Johanna Sahlberg </title>
 
   <!-- following link is for the favicon // -->
-  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32">
 
   <!-- following link connects to a CDN (content delivery network) to nomralise css
       forcing the browser to render all elements more consistently and inline with modern standards // -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
+    referrerpolicy="no-referrer">
 
   <!-- following link embeds the  two chosen fonts, they need to be embeded ahead of the link to the css file // -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -535,13 +535,13 @@
         </a>
       </div>
 
-      <section class="contact-section">
+      <div class="contact-section">
         <h1 id="h1__contact" class="section__header1 contact-section__header1">
           Kontakt
         </h1>
 
         <p class="contact-section__paragraph">
-          <a href="mailto:johanna.sahlberg@outlook.de ?subject= Contact via website" id="link__contact-me" class="links contact-section__link">
+          <a href="mailto:johanna.sahlberg@outlook.de?subject=Contact_via_website" id="link__contact-me" class="links contact-section__link">
             Klicka här för att kontakta mig
           </a>
           eller skicka ett medelande med nedanstående formulär.
@@ -551,18 +551,18 @@
           Du kan även se mitt CV om du klickar på följande knapp:
         </p>
 
-        <a href="files/CV-Johanna_Sahlberg-swedish.pdf" type="button" class="button" target="_blank">
+        <a href="files/CV-Johanna_Sahlberg-swedish.pdf" class="button" target="_blank">
           Se mitt CV
         </a>
 
-      </section>
+      </div>
 
-      <section class="contact-section contact-section__form">
+      <div class="contact-section contact-section__form">
         <h2 id="contact-form__header" class="section__header2 contact-section__header">
           Kontakt formulär
         </h2>
 
-        <form action="mailto:johanna.sahlberg@outlook.de " method="post" id="contact-form" class="contact-section__form" name="Contact form">
+        <form action="mailto:johanna.sahlberg@outlook.de" method="post" id="contact-form" class="contact-section__form" name="Contact form">
 
           <label class="standard-label standard-label__email" for="contact-form-input__email"> Din e-mail adress: </label>
           <input type="email" id="contact-form-input__email" class="contact-form__input" required> <br>
@@ -584,8 +584,7 @@
             Skicka medelande
           </button>
         </form>
-
-      </section>
+      </div>
 
     </section>
 
