--- a/work-german.html
+++ b/work-german.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="de">
+<html lang="zxx">
 
 <head>
   <!--
@@ -18,12 +18,12 @@
   <title> Johanna Sahlbergs Projekte </title>
 
   <!-- following link is for the favicon // -->
-  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32">
 
   <!-- following link connects to a CDN (content delivery network) to nomralise css
     forcing the browser to render all elements more consistently and inline with modern standards // -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
+    referrerpolicy="no-referrer">
 
   <!-- following link embeds the chosen 2 fonts, it needs to be embeded ahead of the link to the css file // -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
