--- a/about-german.html
+++ b/about-german.html
@@ -17,12 +17,12 @@
   <title> Über Johanna Sahlberg </title>
 
   <!-- following link is for the favicon // -->
-  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32">
 
   <!-- following link connects to a CDN (content delivery network) to nomralise css
       forcing the browser to render all elements more consistently and inline with modern standards // -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
+    referrerpolicy="no-referrer">
 
   <!-- following links embeds the fonts, they need to be embeded ahead of the link to the css file // -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -91,7 +91,7 @@
       </div>
 
 
-      <section class="about-section">
+      <div class="about-section">
         <h1 id="about-section__h1" class="section__header1 about-section__header1">
           Über mich
         </h1>
@@ -104,10 +104,10 @@
           Schwedisch, Engisch und Deutsch spreche und schreibe ich fließend, sodass ich auf Projekten in allen 3 SPrachen arbeiten kann<br> <br>
           Wenn ich nicht code oder mehr über Web-Entwicklung lerne, liebe ich es alle Arten von Büchern zu lesen, zu reisen und zu fotografieren.
         </p>
-      </section>
+      </div>
 
 
-      <section class="about-section">
+      <div class="about-section">
         <h2 id="about-skills-table" class="about-section__header2">
         Kompetenzen
         </h2>
@@ -146,10 +146,10 @@
           Um mehr über meine Fähigkeiten zu erfahren, klicke auf den folgenden Knopf, dann kannst du dir meinen Lebenlauf ansehen
         </p>
 
-        <a href="files/CV-Johanna_Sahlberg-german.pdf" type="button" class="button" download target="_blank">
+        <a href="files/CV-Johanna_Sahlberg-german.pdf" class="button" download target="_blank">
           Lebenslauf ansehen
         </a>
-      </section>
+      </div>
 
       <!-- This is a vector image of berlin, do not keep this as is
           ###
