--- a/about-swedish.html
+++ b/about-swedish.html
@@ -10,19 +10,19 @@
     -->
   <meta charset="utf-8">
 
-  <meta name="JS Portfolio Site" content=" This is a fullstack web developer's (Johanna Sahlberg) Portfolio Site. Check out the work. ">
+  <meta name="JS Portfolio Site" content=" This is a fullstack web developer's (Johanna Sahlberg) Portfolio Site. Check out the work.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title> Om Johanna Sahlberg </title>
 
   <!-- following link is for the favicon // -->
-  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32">
 
   <!-- following link connects to a CDN (content delivery network) to nomralise css
       forcing the browser to render all elements more consistently and inline with modern standards // -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
+    referrerpolicy="no-referrer">
 
   <!-- following links embeds the fonts, they need to be embeded ahead of the link to the css file // -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -91,7 +91,7 @@
       </div>
 
 
-      <section class="about-section">
+      <div class="about-section">
         <h1 id="about-section__h1" class="section__header1 about-section__header1">
           Om mig
         </h1>
@@ -105,10 +105,10 @@
           När jag inte håller på med programmering eller lär mig mer om web development, så älskar jag att läsa olika sorters böcker,
           resa och fotografera.
         </p>
-      </section>
+      </div>
 
 
-      <section class="about-section">
+      <div class="about-section">
         <h2 id="about-skills-table" class="about-section__header2">
           Förmågor & erfarenheter
         </h2>
@@ -147,10 +147,10 @@
           Om du vill veta mer om mina förmågor och mina erfarenheter, klicka på knappen nedanför, för att se mit CV
         </p>
 
-        <a href="files/CV-Johanna_Sahlberg-swedish.pdf" type="button" class="button" download target="_blank">
+        <a href="files/CV-Johanna_Sahlberg-swedish.pdf" class="button" download target="_blank">
           Se mitt CV
         </a>
-      </section>
+      </div>
 
       <!-- This is a vector image of berlin, do not keep this as is
           ###
