--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,12 @@
   <title> Contact Johanna Sahlberg </title>
 
   <!-- following link is for the favicon // -->
-  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/JS-favicon-32x32.png" sizes="32x32">
 
   <!-- following link connects to a CDN (content delivery network) to nomralise css
       forcing the browser to render all elements more consistently and inline with modern standards // -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
+    referrerpolicy="no-referrer">
 
   <!-- following link embeds the  two chosen fonts, they need to be embeded ahead of the link to the css file // -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -535,13 +535,13 @@
         </a>
       </div>
 
-      <section class="contact-section">
+      <div class="contact-section">
         <h1 id="h1__contact" class="section__header1 contact-section__header1">
           Contact
         </h1>
 
         <p class="contact-section__paragraph">
-          <a href="mailto:johanna.sahlberg@outlook.de ?subject= Contact via website" id="link__contact-me" class="links contact-section__link">
+          <a href="mailto:johanna.sahlberg@outlook.de?subject=Contact_via_website" id="link__contact-me" class="links contact-section__link">
             Click here to contact me
           </a>
           or send me a message using the contact form below.
@@ -551,13 +551,13 @@
           You can also view my CV using this button:
         </p>
 
-        <a href="files/CV-Johanna_Sahlberg-english.pdf" type="button" class="button" target="_blank">
+        <a href="files/CV-Johanna_Sahlberg-english.pdf"  class="button" target="_blank">
           View my CV
         </a>
 
-      </section>
+      </div>
 
-      <section class="contact-section contact-section__form">
+      <div class="contact-section contact-section__form">
         <h2 id="contact-form__header" class="section__header2 contact-section__header">
           Contact form
         </h2>
@@ -584,8 +584,7 @@
             Send message
           </button>
         </form>
-
-      </section>
+      </div>
 
     </section>
 
