corrected mistakes in text

--- a/about-german.html
+++ b/about-german.html
@@ -99,10 +99,10 @@
         <p id="about-paragraph" class="about-section__paragraph">
           Hallo, <br> <br>
           Ich bin Johanna und ich bin eine schwedische full-stack Web-Entwicklerin und wohne im wunderschönen Hamburg. <br> <br>
-          Ich baue leidenschaftlich gern schöne und funktionale Webseiten, die für alle gut zugänglich sind.
-          Probleme effizient zu lösen ist etwas, was ich sehr gerne tue.  <br> <br>
-          Schwedisch, Engisch und Deutsch spreche und schreibe ich fließend, sodass ich auf Projekten in allen 3 SPrachen arbeiten kann<br> <br>
-          Wenn ich nicht code oder mehr über Web-Entwicklung lerne, liebe ich es alle Arten von Büchern zu lesen, zu reisen und zu fotografieren.
+          Ich baue lunglaublich gern schöne und funktionale Webseiten, die für alle gut zugänglich sind.
+          Probleme effizient zu lösen ist etwas, ist eine meiner Leidenschaften.  <br> <br>
+          Schwedisch, Engisch und Deutsch spreche und schreibe ich fließend, sodass ich auf Projekten in allen 3 Sprachen arbeiten kann. <br> <br>
+          Wenn ich nicht code oder mehr über Web-Entwicklung lerne, liebe ich es Bücher zu lesen, zu reisen und zu fotografieren.
         </p>
       </div>
 
@@ -143,7 +143,7 @@
         </table>
 
         <p>
-          Um mehr über meine Fähigkeiten zu erfahren, klicke auf den folgenden Knopf, dann kannst du dir meinen Lebenlauf ansehen
+          Um mehr über meine Fähigkeiten zu erfahren, klicke auf den folgenden Knopf, dann kannst du dir meinen Lebenlauf ansehen. <br><br>
         </p>
 
         <a href="files/CV-Johanna_Sahlberg-german.pdf" class="button" download target="_blank">
