--- a/about-swedish.html
+++ b/about-swedish.html
@@ -100,9 +100,9 @@
           Hejsan, <br> <br>
           jag är Johanna och jag är en full-stack web developer från Sverige som bor i Hamburg, Tyskland. <br> <br>
           Jag älskar att skapa vackra och funktionella nya websidor, som är tillgängliga för alla.
-          En av mina favorit sysselsättningar är att hitta effiktiva lösningar till problem. <br> <br>
+          En av mina favorit sysselsättningar är att hitta effiktiva lösningar till olika sorters problem. <br> <br>
           Jag kan Svenska, Engelska och Tyska flytande, så jag kan jobba på projekt på alla 3 språken.<br> <br>
-          När jag inte håller på med programmering eller lär mig mer om web development, så älskar jag att läsa olika sorters böcker,
+          När jag inte håller på med programmering eller lär mig mer om web development, så älskar jag att läsa,
           resa och fotografera.
         </p>
       </div>
