--- a/index-german.html
+++ b/index-german.html
@@ -99,7 +99,7 @@
 
         <p>
           <a href="work.html" id="check-out-my-work-link" class="profile-section__link">
-            Schau dir ein paar meine Projekte an
+            Schau dir ein paar meiner Projekte an
           </a>
 
           oder finde das wichtigste
