--- a/work-swedish.html
+++ b/work-swedish.html
@@ -177,7 +177,7 @@
           <h2 class="section__header2 project-list-item__header"> Ditt projekt? </h2>
 
           <p class="project-list__paragraph">
-            Du behöver hjälp med ditt web projekt?<br>
+            Behöver du hjälp med ditt web projekt?<br>
             Som en  fullstack web developer kan jag hjälpa dig skapa din dröm websida eller app! <br>
             Jag kan jobba med följande technologier <br>
             - HTML <br>
